Simplified code, added better security
