# models/account.js
@@ -1,22 +1,10 @@
 module.exports = (mongoose) => {
     const accountSchema = mongoose.Schema({
-      username: {
+      sub: {
         type: String
       },
-      actualName: {
-        type: String
-      },
-      email: {
-        type: String
-      },
-      password: {
-        type: String
-      },
-      items: {
-        type: Array
-      },
-      privileges: {
-        type: String
+      listings: {
+        type: [String]
       },
     });
   
